--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-MONGO_URI=mongodb://anchal:anchal@ac-euou2gv-shard-00-00.tc9r5bh.mongodb.net:27017,ac-euou2gv-shard-00-01.tc9r5bh.mongodb.net:27017,ac-euou2gv-shard-00-02.tc9r5bh.mongodb.net:27017/?ssl=true&replicaSet=atlas-l7tskm-shard-0&authSource=admin&retryWrites=true
+MONGO_URI=mongodb:/xyz@ac-euou2gv-shard-00-00.tc9r5bh.mongodb.net:27017,ac-euou2gv-shard-00-01.tc9r5bh.mongodb.net:27017,ac-euou2gv-shard-00-02.tc9r5bh.mongodb.net:27017/?ssl=true&replicaSet=atlas-l7tskm-shard-0&authSource=admin&retryWrites=true
 
 FRONTEND_URL=http://localhost:5173
 
@@ -12,9 +12,9 @@ JWT_EXPIRES=7d
 
 COOKIE_EXPIRE=7
 
-CLOUDINARY_CLOUD_NAME=dudasiuhj
+CLOUDINARY_CLOUD_NAME=
 
-CLOUDINARY_API_SECRET=RIwIxrokMQl2_I3p6rusYh-hzbg
+CLOUDINARY_API_SECRET=
 
-CLOUDINARY_API_KEY=586862929387395
+CLOUDINARY_API_KEY=
  
